--- a/code/external.css
+++ b/code/external.css
@@ -1,7 +1,10 @@
 .abc{
     margin-left: 50px;
-    margin-right: 20px;
+    /* margin-right: 20px; */
     /* width: 1200px; */
+}
+section{
+  margin-right: 20px;
 }
 .d-flex{
     width: 300px;
@@ -31,7 +34,7 @@
     margin-top: -10px;
 }
 .homeimg{
-    margin-left: 800px;
+    margin-left: 838px;
     margin-top: 60px;
 }
 .head1{
@@ -58,11 +61,24 @@
 .oneset{
     display: flex;
     justify-content: space-between;
-    
-
-    
+ }
+.oneset figure{
+  border: 1px solid rgb(194, 244, 216);
+  padding: 10px;
+  border-radius: 20px;
 }
-  figcaption{
+.imgs{
+  border-radius: 10px;
+} 
+figcaption{
+  text-align: center;
+  font-weight: 500;
+  color: rgb(15, 74, 74);
+  padding-top: 18px;
+  padding-bottom: 10px;
+
+}
+   /* figcaption{
    line-height: 40px;
    text-align: center;
    font-weight: 500;
@@ -80,17 +96,17 @@
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
     padding: 10px; 
-    /* border-radius: 20px;  */
+    border-radius: 20px; 
     border-bottom: 1px solid white;
-}  
+}   */
 .btn2{
     border: none;
-    padding: 10px;
+    padding: 12px;
     font-size: 15px;
     font-weight: 500;
     padding-left: 20px;
     padding-right: 20px;
-    border-radius: 3px;
+    border-radius: 5px;
 }
 .feature{
     margin-top: 45px;
@@ -135,4 +151,102 @@
   .products3 #img8:hover{
     opacity: 0;
   } 
-  
+  .log{
+    margin-left: -50px;
+    background-color: hsl(0, 0%, 89%);
+  }
+  .login{
+    padding-top: 15px;
+    padding-bottom: 15px;
+    margin-left: 50px;
+    font-weight: 400;
+    font-size: 15px;
+    color: rgb(57, 88, 57);
+    word-spacing: 15px;
+    border: 1px solid rgb(194, 244, 216);
+
+  }
+  .loginbox{
+    border: 0.5px solid hsl(0, 1%, 86%);
+    width: 685px;
+    padding: 30px;
+    margin-top: 30px;
+    border-radius: 8px;
+    margin-left: 30px;
+  }
+  .email{
+    padding: 10px;
+    margin-top: 20px;
+    width: 620px;
+    border: 0.5px solid hsl(0, 1%, 86%);
+    border-radius: 3px;
+    padding-left: 15px;
+    margin-left: 12px;
+  }
+  .emails{
+    padding: 10px;
+    width: 620px;
+    border: 0.5px solid hsl(0, 1%, 86%);
+    border-radius: 3px;
+    padding-left: 15px;
+    margin-left: 12px;
+  }
+  h3{
+    margin-left: 12px;
+  }
+  .logbtn{
+    border: none;
+    border-radius: 4px;
+    background-color: teal;
+    color: white;
+    padding: 14px;
+    font-weight: 500px;
+    padding-left: 33px;
+    padding-right: 33px;
+    margin-left: 12px;
+  }
+  .loginbox1{
+    border: 0.5px solid hsl(0, 1%, 86%);
+    width: 685px;
+    padding: 30px;
+    margin-top: -320px;
+    border-radius: 8px;
+    position: absolute;
+    margin-left: 740px; 
+  }
+  .account{
+    padding: 10px;
+    margin-top: 20px;
+    width: 600px;
+    border: 0.5px solid hsl(0, 1%, 86%);
+    border-radius: 3px;
+    padding-left: 15px;
+    margin-left: 12px;
+  }
+  .account1{
+    padding: 10px;
+    /* margin-top: 20px; */
+    width: 600px;
+    border: 0.5px solid hsl(0, 1%, 86%);
+    border-radius: 3px;
+    padding-left: 15px;
+    margin-left: 12px;
+  }
+  .account2{
+    padding: 10px;
+    /* margin-top: 20px; */
+    width: 600px;
+    border: 0.5px solid hsl(0, 1%, 86%);
+    border-radius: 3px;
+    padding-left: 15px;
+    margin-left: 12px;
+  }
+  .account3{
+    padding: 10px;
+    /* margin-top: 20px; */
+    width: 600px;
+    border: 0.5px solid hsl(0, 1%, 86%);
+    border-radius: 3px;
+    padding-left: 15px;
+    margin-left: 12px;
+  }
