--- a/code/external.css
+++ b/code/external.css
@@ -46,6 +46,7 @@ section{
 }
 .trend{
     width: 500px;
+    margin-left: -4px;
     line-height: 55px;
 }
 .shop{
@@ -117,40 +118,97 @@ figcaption{
 .pro1{
     margin-top: 60px;
 }
- .products img{
+ .product1 img{
   position: absolute;
   border-radius: 15px;
 } 
-.products #img1:hover{
+.product1 #img1:hover{
   opacity: 0;
 } 
-.products1 img{
+.product2 img{
     position: absolute;
     border-radius: 15px;
     margin-left: 400px;
     
   } 
-  .products1 #img4:hover{
+  .product2 #img4:hover{
     opacity: 0;
   } 
-  .products2 img{
+  .product3 img{
     position: absolute;
     border-radius: 15px;
     margin-left: 800px;
     
   } 
-  .products2 #img6:hover{
+  .product3 #img6:hover{
     opacity: 0;
   } 
-  .products3 img{
+  .product4 img{
     position: absolute;
     border-radius: 15px;
     margin-left: 1170px;
     
   } 
-  .products3 #img8:hover{
+  .product4 #img8:hover{
     opacity: 0;
   } 
+  .product5 img{
+    position: absolute;
+    border-radius: 15px;
+    margin-top: 450px;
+  } 
+  .product5 #img10:hover{
+    opacity: 0;
+  } 
+  .product6 img{
+    position: absolute;
+    border-radius: 15px;
+    margin-left: 400px;
+    margin-top: 450px;
+  } 
+  .product6 #img12:hover{
+    opacity: 0;
+  } 
+  .product7 img{
+    position: absolute;
+    border-radius: 15px;
+    margin-left: 800px;
+    margin-top: 450px;
+  } 
+  .product7 #img14:hover{
+    opacity: 0;
+  } 
+  .product8 img{
+    position: absolute;
+    border-radius: 15px;
+    margin-left: 1170px;
+    margin-top: 450px;
+    
+  } 
+  .product8 #img16:hover{
+    opacity: 0;
+  } 
+   .procap8{
+    color: gray;
+    position: absolute;
+    left: 1230px;
+    top: 1750px;
+    font-size: large;
+    font-family: sans-serif;
+  } 
+  .procap82{
+    position: absolute;
+    left: 1230px;
+    top: 1785px;
+    font-size: large;
+    font-weight: 550;
+    font-family: sans-serif;
+  }
+  #rate-5{
+    position: absolute;
+    left: 1230px;
+    top: 1800px;
+  }
   .log{
     margin-left: -50px;
     background-color: hsl(0, 0%, 89%);
@@ -199,10 +257,10 @@ figcaption{
     border-radius: 4px;
     background-color: teal;
     color: white;
-    padding: 14px;
+    padding: 10px;
     font-weight: 500px;
-    padding-left: 33px;
-    padding-right: 33px;
+    padding-left: 25px;
+    padding-right: 25px;
     margin-left: 12px;
   }
   .loginbox1{
@@ -249,4 +307,134 @@ figcaption{
     border-radius: 3px;
     padding-left: 15px;
     margin-left: 12px;
+  }
+  .footer{
+    margin-top: 200px;
+    background-color: rgb(159, 200, 200);
+    margin-left: -50px;
+    margin-right: -20px;
+    height: 100px;
+  }
+  .emaimg{
+    margin-left: 50px;
+    margin-top: 10px;
+  }
+  .foot1{
+    margin-left: -300px;
+    margin-top: 21px;
+    font-weight: 600;
+    word-spacing: -1px;
+    
+  }
+  .emailbox{
+    border-radius: 0px;
+    border-bottom-left-radius: 4px;
+    border-top-left-radius: 4px;
+    width: 350px;
+    margin-left: -200px;
+    font-size: small;
+    padding: 10px;
+    padding-left:20px;
+  }
+  .foot2{
+    margin-top: 5px;
+    font-weight: 600;
+    word-spacing: -1px;
+  }
+  .subbox{
+    background-color: black;
+    color: white;
+    border-radius: 0px;
+    border-bottom-right-radius: 4px;
+    border-top-right-radius: 4px;
+    font-size: small;
+  }
+  .footerpart{
+    margin-top: 5px;
+  }
+  .foot6{
+    margin-top: 30px;
+    line-height: 50px;
+    color: gray;
+    font-weight: 600;
+    font-size: medium;
+  }
+  .foot4{
+    font-weight: 500;
+    color: rgb(57, 88, 57);
+  }
+  .foot5{
+    font-size: medium;
+    line-height: 30px;
+    margin-top: -50px;
+    color: rgb(57, 88, 57);
+  }
+  .foot7{
+    color: gray;
+    margin-top: 25px;
+    font-weight: 600;
+    font-size: medium;
+  }
+  .footicons{
+    width: 150px;
+    display: flex;
+    justify-content: space-between;
+    filter: brightness(3) invert(1);
+  }
+  .footset{
+    margin-left: 520px;
+    margin-top: -280px;
+  }
+  .footset1{
+    margin-top: 20px;
+  }
+  .footset2{
+    margin-left: 830px;
+    margin-top: -285px;
+  }
+  .footpay{
+    margin-left: 1100px;
+    margin-top: -285px;
+  }
+  .footpay img{
+    margin-top: 20px;
+  }
+  .footimg{
+    margin-top: 50px;
+  }
+  table.single-column {
+    border-collapse: collapse;
+    width: 200px; 
+    margin-top: 50px;
+    margin-left: 100px;
+    width: 450px;
+  }
+  
+  table.single-column td {
+    border: 1px solid #aaa7a7;
+    /* text-align: center; */
+    padding: 10px; 
+    height: 50px; 
+  }
+  .fa-solid{
+    margin-left: 15px;
+    padding: 10px;
+  }
+  .fa-regular{
+    margin-left: 17px;
+    padding: 10px;
+  }
+  .dashboard{
+    width: 850px;
+    border: 1px solid #aaa7a7;
+    margin-left: 600px;
+    margin-top: -340px;
+  }
+  .dashboard h6{
+    padding: 16px;
+    background-color: hsl(0, 0%, 89%);
+  }
+  .dashboard p{
+    padding: 5px;
+    padding-left: 16px;
   }
