--- a/code/external.css
+++ b/code/external.css
@@ -115,26 +115,68 @@ figcaption{
     display: flex;
     justify-content: space-between;
 }
-.pro1{
-    margin-top: 60px;
+.pro{
+  width: 95vw;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 60px;
 }
- .product1 img{
-  position: absolute;
-  border-radius: 15px;
-} 
-.product1 #img1:hover{
+
+.pro>div{
+  margin-left: 20px;
+  margin-bottom: 20px;
+  width: 320px;
+  border-radius: 20px;
+}
+
+.card-details{
+  padding: 15px;
+}
+
+ .pro img{
+  border-radius: 20px;
+ }
+
+.card{
+  border: 1px solid rgb(210, 240, 223);
+  position: relative;
+  padding: 10px;
+  width: 390px;
+}
+
+.product #img2{
+  position:absolute;
+  top:10px;
   opacity: 0;
-} 
-.product2 img{
+  transition: opacity 0.5s;
+}
+
+.card:hover #img2{
+  opacity: 1;
+}
+
+.price{
+  color: teal;
+  font-weight: 600;
+  font-size: 18px;
+}
+.offprz{
+  font-size: 15px;
+  color: rgb(170, 167, 167);
+  text-decoration: 1px line-through;
+  padding-left:5px ;
+}
+/* .product2 img{
     position: absolute;
     border-radius: 15px;
     margin-left: 400px;
     
   } 
   .product2 #img4:hover{
-    opacity: 0;
-  } 
-  .product3 img{
+    opacity: 0; 
+  } */
+  /* .product3 img{
     position: absolute;
     border-radius: 15px;
     margin-left: 800px;
@@ -187,8 +229,8 @@ figcaption{
   } 
   .product8 #img16:hover{
     opacity: 0;
-  } 
-   .procap8{
+  }  */
+   /* .procap8{
     color: gray;
     position: absolute;
     left: 1230px;
@@ -202,8 +244,8 @@ figcaption{
     top: 1785px;
     font-size: large;
     font-weight: 550;
-    font-family: sans-serif;
-  }
+    font-family: sans-serif; 
+  } */
   #rate-5{
     position: absolute;
     left: 1230px;
