--- a/code/shop.css
+++ b/code/shop.css
@@ -33,3 +33,167 @@ section{
 .cartbtn{
     margin-top: -10px;
 }
+.log{
+    margin-left: -50px;
+    background-color: hsl(0, 0%, 89%);
+  }
+  .login{
+    padding-top: 15px;
+    padding-bottom: 15px;
+    margin-left: 50px;
+    font-weight: 400;
+    font-size: 15px;
+    color: rgb(57, 88, 57);
+    word-spacing: 15px;
+    /* border: 1px solid rgb(194, 244, 216); */
+
+  }
+
+  /* Cards */
+  .pro{
+    width: 95vw;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 60px;
+  }
+  
+  .pro>div{
+    margin-left: 30px;
+    margin-bottom: 20px;
+    width: 320px;
+    border-radius: 20px;
+  }
+  
+  .card-details{
+    padding: 15px;
+  }
+  
+   .pro img{
+    border-radius: 20px;
+   }
+  
+  .card{
+    border: 1px solid rgb(210, 240, 223);
+    position: relative;
+    padding: 10px;
+    width: 390px;
+  }
+  
+  .product #img2{
+    position:absolute;
+    top:10px;
+    opacity: 0;
+    transition: opacity 0.5s;
+  }
+  
+  .card:hover #img2{
+    opacity: 1;
+  }
+  
+  .price{
+    color: teal;
+    font-weight: 600;
+    font-size: 18px;
+  }
+  .offprz{
+    font-size: 15px;
+    color: rgb(170, 167, 167);
+    text-decoration: 1px line-through;
+    padding-left:5px ;
+  }
+/* Footers */
+.footer{
+    margin-top: 200px;
+    background-color: rgb(159, 200, 200);
+    margin-left: -50px;
+    margin-right: -20px;
+    height: 100px;
+  }
+  .emaimg{
+    margin-left: 50px;
+    margin-top: 10px;
+  }
+  .foot1{
+    margin-left: -300px;
+    margin-top: 21px;
+    font-weight: 600;
+    word-spacing: -1px;
+    
+  }
+  .emailbox{
+    border-radius: 0px;
+    border-bottom-left-radius: 4px;
+    border-top-left-radius: 4px;
+    width: 350px;
+    margin-left: -200px;
+    font-size: small;
+    padding: 10px;
+    padding-left:20px;
+  }
+  .foot2{
+    margin-top: 5px;
+    font-weight: 600;
+    word-spacing: -1px;
+  }
+  .subbox{
+    background-color: black;
+    color: white;
+    border-radius: 0px;
+    border-bottom-right-radius: 4px;
+    border-top-right-radius: 4px;
+    font-size: small;
+  }
+  .footerpart{
+    margin-top: 5px;
+  }
+  .foot6{
+    margin-top: 30px;
+    line-height: 50px;
+    color: gray;
+    font-weight: 600;
+    font-size: medium;
+  }
+  .foot4{
+    font-weight: 500;
+    color: rgb(57, 88, 57);
+  }
+  .foot5{
+    font-size: medium;
+    line-height: 30px;
+    margin-top: -50px;
+    color: rgb(57, 88, 57);
+  }
+  .foot7{
+    color: gray;
+    margin-top: 25px;
+    font-weight: 600;
+    font-size: medium;
+  }
+  .footicons{
+    width: 150px;
+    display: flex;
+    justify-content: space-between;
+    filter: brightness(3) invert(1);
+  }
+  .footset{
+    margin-left: 520px;
+    margin-top: -280px;
+  }
+  .footset1{
+    margin-top: 20px;
+  }
+  .footset2{
+    margin-left: 830px;
+    margin-top: -285px;
+  }
+  .footpay{
+    margin-left: 1100px;
+    margin-top: -285px;
+  }
+  .footpay img{
+    margin-top: 20px;
+  }
+  .footimg{
+    margin-top: 50px;
+  }
