--- a/code/compare.css
+++ b/code/compare.css
@@ -10,6 +10,10 @@ section{
 .d-flex{
     width: 300px;
 }
+.nav-link{
+  font-size: 15px;
+  font-weight: 600;
+}
 .tags{
     margin-inline: 50px;
 }
@@ -148,6 +152,10 @@ section{
     border-top-right-radius: 4px;
     font-size: small;
   }
+  .subbox:hover{
+    background-color: teal;
+    color: white;
+  }
   .footerpart{
     margin-top: 5px;
   }
@@ -184,12 +192,18 @@ section{
     margin-left: 520px;
     margin-top: -280px;
   }
+  .footset p:hover{
+    color: teal;
+  }
   .footset1{
     margin-top: 20px;
   }
   .footset2{
     margin-left: 830px;
     margin-top: -285px;
+  }
+  .footset2 p:hover{
+    color: teal;
   }
   .footpay{
     margin-left: 1100px;
@@ -201,3 +215,15 @@ section{
   .footimg{
     margin-top: 50px;
   }
+  .copyright{
+    margin-top: 210px;
+  }
+  #design{
+    margin-left:990px;
+    color: grey;
+   }
+  
+   .logo{
+  color:grey;
+  
+   }
