--- a/code/index.css
+++ b/code/index.css
@@ -10,6 +10,10 @@ margin-right: 20px;
 .d-flex{
   width: 300px;
 }
+.nav-link{
+  font-size: 15px;
+  font-weight: 600;
+}
 .tags{
   margin-inline: 50px;
 }
@@ -41,7 +45,7 @@ margin-right: 20px;
 }
 .head1{
     color: rgb(57, 88, 57);
-    margin-top: -300px;
+    margin-top: -290px;
 }
 .grt{
     font-size: 40px;
@@ -56,6 +60,12 @@ margin-right: 20px;
   color: white;
   border-radius: 3px;
   font-size: 15px;
+  font-weight: 500;
+}
+.shop:hover{
+  background-color: white;
+  border: 1px solid teal;
+  color: teal;
 }
 /* popular categories */
 .pop{
@@ -340,12 +350,20 @@ figcaption{
  .banners{
   display: flex;
  }
+
+
+ /* new arrivals */
+
+ .new-arrivals{
+  margin-left: 10px;
+  margin-top: 40px;
+ }
  /* 4 column design */
 
  .four-column{
   margin-left: -5px;
   padding-top: 50px;
-  padding-bottom: 30px;
+  /* padding-bottom: 30px; */
  }
  .grid{
   width: 95vw;
@@ -370,4 +388,177 @@ figcaption{
   padding-left: 10px;
   margin-top: -10px;
  }
+
+ .chervon{
+   margin-right: 50px;
+   position: absolute;
+   top:560px;
+   left: 1370px;
+ }
+ .chervon1{
+  position: absolute;
+  left: 1370px;
+  
+}
+ .arrow1{
+  background-color: #E9F6EB;
+  border: 1px solid;
+  color: green;
+  padding: 10px;
+  border-radius: 50%;
+
+ }
+ .arrow2{
+  background-color: #E9F6EB;
+  border: 1px solid;
+  color: green;
+  padding: 10px;
+  border-radius: 50%;
+
+ }
+
+
+ .fa-solid{
+ 
+ }
+ .xyz{
+  border: 1px solid rgb(229, 243, 235);
+  width: 320px;
+  position: absolute;
+  top: 3270px;
+ }
+ .uvw{
+  border: 2px solid teal;
+  width: 60px;
+  position: absolute;
+  top: 3270px;
+ }
+.copyright{
+  margin-top: 210px;
+}
+ #design{
+  margin-left:990px;
+  color: grey;
+ }
+
+ .logo{
+color:grey;
+
+ }
+ .line2{
+  margin-left: 360px;
+ }
+ .line3{
+  margin-left: 730px;
+ }
+ .line4{
+  margin-left: 1090px;
+ }
+  
+
+ /* footer */
+ .footer{
+  margin-top: 80px;
+  background-color: rgb(159, 200, 200);
+  margin-left: -50px;
+  margin-right: -20px;
+  height: 100px;
+}
+.emaimg{
+  margin-left: 50px;
+  margin-top: 10px;
+}
+.foot1{
+  margin-left: -300px;
+  margin-top: 21px;
+  font-weight: 600;
+  word-spacing: -1px;
+  
+}
+.emailbox{
+  border-radius: 0px;
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
+  width: 350px;
+  margin-left: -200px;
+  font-size: small;
+  padding: 10px;
+  padding-left:20px;
+}
+.foot2{
+  margin-top: 5px;
+  font-weight: 600;
+  word-spacing: -1px;
+}
+.subbox{
+  background-color: black;
+  color: white;
+  border-radius: 0px;
+  border-bottom-right-radius: 4px;
+  border-top-right-radius: 4px;
+  font-size: small;
+}
+.subbox:hover{
+  background-color: teal;
+  color: white;
+}
+.footerpart{
+  margin-top: 5px;
+}
+.foot6{
+  margin-top: 30px;
+  line-height: 50px;
+  color: gray;
+  font-weight: 600;
+  font-size: medium;
+}
+.foot4{
+  font-weight: 500;
+  color: rgb(57, 88, 57);
+}
+.foot5{
+  font-size: medium;
+  line-height: 30px;
+  margin-top: -50px;
+  color: rgb(57, 88, 57);
+}
+.foot7{
+  color: gray;
+  margin-top: 25px;
+  font-weight: 600;
+  font-size: medium;
+}
+.footicons{
+  width: 150px;
+  display: flex;
+  justify-content: space-between;
+  filter: brightness(3) invert(1);
+}
+.footset{
+  margin-left: 520px;
+  margin-top: -280px;
+}
+.footset p:hover{
+  color: teal;
+}
+.footset1{
+  margin-top: 20px;
+}
+.footset2{
+  margin-left: 830px;
+  margin-top: -285px;
+}
+.footset2 p:hover{
+  color: teal;
+}
+.footpay{
+  margin-left: 1100px;
+  margin-top: -285px;
+}
+.footpay img{
+  margin-top: 20px;
+}
+.footimg{
+  margin-top: 50px;
+}
  
