--- a/code/myaccount.css
+++ b/code/myaccount.css
@@ -10,6 +10,10 @@ margin-right: 20px;
 .d-flex{
   width: 300px;
 }
+.nav-link{
+  font-size: 15px;
+  font-weight: 600;
+}
 .tags{
   margin-inline: 50px;
 }
@@ -126,6 +130,10 @@ table.single-column {
     border-top-right-radius: 4px;
     font-size: small;
   }
+  .subbox:hover{
+    background-color: teal;
+    color: white;
+  }
   .footerpart{
     margin-top: 5px;
   }
@@ -162,12 +170,18 @@ table.single-column {
     margin-left: 520px;
     margin-top: -280px;
   }
+  .footset p:hover{
+    color: teal;
+  }
   .footset1{
     margin-top: 20px;
   }
   .footset2{
     margin-left: 830px;
     margin-top: -285px;
+  }
+  .footset2 p:hover{
+    color: teal;
   }
   .footpay{
     margin-left: 1100px;
