--- a/code/login.css
+++ b/code/login.css
@@ -249,3 +249,15 @@ section{
   .footimg{
     margin-top: 50px;
   }
+  .copyright{
+    margin-top: 210px;
+  }
+  #design{
+    margin-left:990px;
+    color: grey;
+   }
+  
+   .logo{
+  color:grey;
+  
+   }
