--- a/code/index.css
+++ b/code/index.css
@@ -561,4 +561,16 @@ color:grey;
 .footimg{
   margin-top: 50px;
 }
+.copyright{
+  margin-top: 210px;
+}
+#design{
+  margin-left:990px;
+  color: grey;
+ }
+
+ .logo{
+color:grey;
+
+ }
  
